Update NBA - HOF project.ipynb

--- a/NBA - HOF project.ipynb
+++ b/NBA - HOF project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# NBA - Hall Of Fame prediction\n",
     "\n",
-    "### Authors:\n",
+    "### Presented By:\n",
     "* **Ilan Simchon**\n",
     "* **Kfir Zilbernagel**\n",
     "\n",
